...
                                                                        if let error = error {
                                                                            let alertVC = UIAlertController.init(title: "Echec", message:"La transaction a échoué ! (\(error)" , preferredStyle: .alert)
                                                                            alertVC.addAction(UIAlertAction.init(title: "OK", style: .default, handler: nil))
                                                                            self.present(alertVC, animated: true, completion: nil)
                                                                        }
                                                                        else {
                                                                            let alertVC = UIAlertController.init(title: "Succès", message:"La transaction a réussi avec succès" , preferredStyle: .alert)
                                                                            alertVC.addAction(UIAlertAction.init(title: "OK", style: .default, handler: nil))
                                                                            self.present(alertVC, animated: true, completion: nil)
                                                                        }
                                                                    })
                                                                    
                                                                }
...
