...
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yel-H9-S44">
                    <rect key="frame" x="16" y="601" width="343" height="50"/>
                    <color key="backgroundColor" red="0.0" green="0.6470588235294118" blue="0.88235294117647056" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="50" id="4Sw-wY-YAh"/>
                    </constraints>
                    <state key="normal" title="Pay">
                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <color key="titleShadowColor" cocoaTouchSystemColor="darkTextColor"/>
                    </state>
                    <userDefinedRuntimeAttributes>
                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                            <integer key="value" value="10"/>
...
